# TrafficPredictor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
airflow/: Dockerfile  README.md  requirements.txt
airflow/dags/: traffic_etl_dag.py
airflow/legacy-etl/ETL/: main.py  utils.py
airflow/legacy-etl/ETL/data/: utils.py
airflow/legacy-etl/ETL/data/data/: main.py
airflow/legacy-etl/ETL/data/model/: model.py
airflow/plugins/operators/: here_api_operator.py
app/: Dockerfile  app.py  requirements.txt  traffic_data.csv  utils.py
app/models/: Model.py  model.py
app/mongodb/: linker.py
app/notebook/: processed_traffic_data.csv  traffic_data.csv
app/utils/: get_data.py  model_loader.py
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  app.py  config.py  dependencies.py  errors.py  schemas.py  utils.py
backend/app/models/: model.py  timexer_model.py
backend/app/repositories/: mongo_repository.py
backend/app/routes/: __init__.py  health_routes.py  traffic_routes.py
backend/app/services/: __init__.py  prediction_service.py  traffic_service.py
docs/: README.md  api-reference.md  architecture.md  index.html
docs/assets/: locations.json
docs/css/: button.css  styles.css
docs/js/: leaflet.js
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/legacy-web/assets/: locations.json
frontend/public/legacy-web/css/: loader.css  styles.css
frontend/public/legacy-web/js/: app.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/app/: layout.tsx
frontend/src/components/: MapPanel.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
infra/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/: dev.tfvars  prod.tfvars
infra/modules/documentdb/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf
infra/modules/ecr/: main.tf  outputs.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/mwaa/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
shared/: README.md
shared/utils/: __init__.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config.py  test_errors.py  test_schemas.py
web/: CNAME  README.md  index.html  package-lock.json
web/assets/: locations.json
web/css/: button.css  styles.css
web/js/: leaflet.js
web/src/app/: globals.css  page.tsx
web/src/components/: map-panel.tsx  sidebar.tsx
web/src/lib/: api.ts  types.ts
