[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "traffic-predictor"
version = "1.0.0"
description = "Real-time traffic monitoring and transformer-based speed forecasting for Ho Chi Minh City"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kyyy", email = "your.email@example.com"}
]
keywords = ["traffic", "prediction", "machine-learning", "time-series", "transformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1.0",
    "mypy>=1.6",
    "pre-commit>=3.5",
]
backend = [
    "Flask>=3.0",
    "flask-cors>=4.0",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "PyWavelets>=1.5",
    "torch>=2.1",
    "boto3>=1.34",
    "gunicorn>=21.2",
]
airflow = [
    "apache-airflow>=2.10",
    "boto3>=1.34",
    "pymongo>=4.6",
    "pyspark>=3.5",
    "requests>=2.31",
    "pendulum>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # ambiguous-unicode-character-string
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"backend/app/models/model.py" = ["N806"]

[tool.ruff.isort]
known-first-party = ["backend", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "flask_cors.*",
    "pywt.*",
    "torch.*",
    "pyspark.*",
    "pendulum.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]